animation line, need to fix all the spacing btw pages

--- a/src/style.css
+++ b/src/style.css
@@ -8,22 +8,26 @@ html{
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 19%, rgba(26,115,185,1) 48%, rgba(22,182,237,1) 70%, rgba(0,212,255,1) 85%);   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding-left: 5em;
+  padding-right: 5em;
+  font-synthesis: none;
+  background: linear-gradient(0deg, #000000 0%, #020024 10%, #060a58 30%, #1a73b9 50%, #22b6ed 70%, #00d4ff 80%) top no-repeat, #000000; background-size: 100% 47%;
+
+}
+
+body{
   margin-left: 5em;
   margin-right: 5em;
-}
-body{
-  margin:0;
-  height:100%
+
 }
 p {
   margin: auto;
 }
 .intro{
-  padding-bottom: 15%;
+  padding-top: 20%;
   display:flex;
   justify-content: space-evenly;
   align-items:center;
@@ -65,30 +69,17 @@ p {
 }
 .center{
   text-align : center;
-  margin-bottom: 5%;
 }
-.spacing{
-  display:flex;
-  flex-direction: column;
-  gap:3em;
-}
-
 
 .face-img img {
   border: solid;
   border-radius: 50%;
 }
-
-@media only screen and (max-width: 1630px) {
-  .face-img img {
-    position: relative;
-  }
-}
 .social-links{
-  margin-top:25px;
+  padding-top:25px;
 }
 .social-links a{
-  margin-right: 15px;
+  padding-right: 15px;
 }
 
 .welcome{
@@ -107,13 +98,12 @@ p {
 .contents{
   opacity:100%;
   transition: opacity 2s ease-in-out;
-  padding-top:15%;
   font-size:24px;
 }
 #introduction{
   display:block;
   height: 1px;
-  margin-top: -60px;
+  padding-top: -60px;
   visibility: hidden;
 }
 .fadeIn{
@@ -125,13 +115,10 @@ p {
 .blockInteract{
   overflow: hidden;
 }
-.parcours{
-
-}
 
 .container {
   scroll-snap-type: y mandatory;
-  overflow-y: scroll;
+  display:grid;
   height: 100vh;
 }
 
@@ -141,25 +128,38 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
 }
 
 .timeline-container {
-  position: relative;
   padding-bottom: 25%;
-  width: 100px; /* Ajuste la largeur du conteneur */
+  width: 100px;
 }
 
 .timeline {
-  position: relative;
+  position: absolute;
   width: 0;
   height: 4px;
   background-color: white;
   transition: width 2s ease-out;
 }
 
-.event {
+.timeline::after {
+  content: '>';
   position: absolute;
+  right: -29px;
+  top: 50%;
+  transform: translateY(-58%);
+  font-size: 72px;
+  transition: opacity 2s ease-out;
+  opacity: 0;
+}
+
+.timeline.expanded::after {
+  opacity: 1;
+}
+
+.event {
   left: 20px;
   opacity: 0;
   transition: opacity 0.5s ease-out;
